SERVER-114340: Use different 'main collection' for each single table access plan (#44359)

GitOrigin-RevId: c108f86cdb2b40b5b8f79def89efdf05506b93ee